--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 </div>
                 <div class="menu_header">
                     <ul>
-                        <li><a href="../git3/index.html" class="menu_h">Home</a></li>
-                        <li><a href="../git3/index4.html" class="menu_h">Pricing</a></li>
-                        <li><a href="../git3/index2.html" class="menu_h">Contact</a></li>
+                        <li><a href="../SKY-Cloud/index.html" class="menu_h">Home</a></li>
+                        <li><a href="../SKY-Cloud/indexes/index4.html" class="menu_h">Pricing</a></li>
+                        <li><a href="../SKY-Cloud/indexes/index2.html" class="menu_h">Contact</a></li>
                     </ul>
                 </div>
                 <div class="login_signup">
-                    <a href="../git3/index6.html" class="login_header">LOGIN</a></li>
+                    <a href="../SKY-Cloud/indexes/index6.html" class="login_header">LOGIN</a></li>
                     <div class="button_header">
                         <button class="btn_header" onclick="location.href='../git3/index5.html'">SIGN UP</button>
                     </div>
