--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             </div>
                         </div>
                         <div class="button_text_card2">
-                            <button class="btn_sec3" onclick="location.href='../git3/index5.html'">Sing Up</button>
+                            <button class="btn_sec3" onclick="location.href='../SKY-Cloud/indexes/index5.html'">Sing Up</button>
                             <div class="text_btn_sec3">
                                 <p class="txt_btn_sec3">14-day money back guarantee</p>
                             </div>
@@ -164,7 +164,7 @@
                             </div>
                         </div>
                         <div class="button_text_card2">
-                            <button class="btn_sec3" onclick="location.href='../git3/index5.html'">Sing Up</button>
+                            <button class="btn_sec3" onclick="location.href='../SKY-Cloud/indexes/index5.html'">Sing Up</button>
                             <div class="text_btn_sec3">
                                 <p class="txt_btn_sec3">14-day money back guarantee</p>
                             </div>
@@ -196,7 +196,7 @@
                             </div>
                         </div>
                         <div class="button_text_card2">
-                            <button class="btn_sec3" onclick="location.href='../git3/index5.html'">Sing Up</button>
+                            <button class="btn_sec3" onclick="location.href='../SKY-Cloud/indexes/index5.html'">Sing Up</button>
                             <div class="text_btn_sec3">
                                 <p class="txt_btn_sec3">14-day money back guarantee</p>
                             </div>
