--- a/indexes/index2.html
+++ b/indexes/index2.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="../git3/assets/css/style2.css">
+    <link rel="stylesheet" href="../SKY-Cloud/assets/css/style2.css">
 </head>
 <body>
     <div class="header">
         <div class="header_main">
             <div class="img_logo_header">
-                <img src="../git3/assets/images/1_str/skybox.png" alt="">
+                <img src="../SKY-Cloud/assets/images/1_str/skybox.png" alt="">
             </div>
             <ul>
                 <li><a href="">Home</a></li>
@@ -26,7 +26,7 @@
     <div class="section1">
         <div class="sec1_text1">CONTACT</div>
         <div class="sec1_text2">ONLINE STORAGE</div>
-        <div class="sec1_img"><img src="../git3/assets/images/2_page/1_section/MAP.png" alt=""></div>
+        <div class="sec1_img"><img src="../SKY-Cloud/assets/images/2_page/1_section/MAP.png" alt=""></div>
     </div>
     <div class="section2">
         <div class="sec2_text1">Drop us a line</div>
@@ -50,14 +50,14 @@
     <div class="section3">
         <div class="sec3_main">
             <div class="sec3_comp">
-                <img src="../git3/assets/images/2_page/3_section/add-user 1.svg" alt="">
+                <img src="../SKY-Cloud/assets/images/2_page/3_section/add-user 1.svg" alt="">
                 <div class="comp_text">
                     <div class="comp1">999529 000 000</div>
                     <div class="comp2">Загружено файлов на сервис</div>
                 </div>
             </div>
             <div class="sec3_comp">
-                <img src="../rep3/assets/images/2_page/3_section/Icon.svg" alt="">
+                <img src="../SKY-Cloud/assets/images/2_page/3_section/Icon.svg" alt="">
                 <div class="comp_text">
                     <div class="comp1">235 764 784</div>
                     <div class="comp2">Зарегистрировано пользователей</div>
