--- a/indexes/index7.html
+++ b/indexes/index7.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="../git3/assets/css/style7.css">
+    <link rel="stylesheet" href="../assets/css/style7.css">
 </head>
 <body>
     <div class="header">
         <div class="header_main">
-            <img src="../git3/assets/images/7_page/skybox.svg" alt="">
+            <img src="../assets/images/1_str/skybox.png" alt="">
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Pricing</a></li>
@@ -29,7 +29,7 @@
         </div>
         <div class="cards">
             <div class="card_1">
-                <img src="../git3/assets/images/7_page/1_section/Frame_1.png" alt="">
+                <img src="../assets/images/7_page/1_section/Frame_1.png alt="">
                 <div class="card_1_text">
                     <div class="card_1_txt_1">
                         <p>ACCOUNT TYPE:</p>
@@ -40,7 +40,7 @@
                 </div>
             </div>
                <div class="card_1">
-                <img src="../git3/assets/images/7_page/1_section/Frame_2.png" alt="">
+                <img src="../assets/images/7_page/1_section/Frame_2.png" alt="">
                 <div class="card_1_text">
                     <div class="card_1_txt_2">
                         <p>LEFT 37 DAYS</p>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="card_1">
-                <img src="../git3/assets/images/7_page/1_section/Frame_3.png" alt="">
+                <img src="../assets/images/7_page/1_section/Frame_3.png" alt="">
                 <div class="card_1_text">
                     <div class="card_1_txt_1">
                         <p>FILE STORES TOTAL</p>
