--- a/indexes/index5.html
+++ b/indexes/index5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../git3/assets/css/style5.css">
+    <link rel="stylesheet" href="../assets/css/style5.css">
     <title>Register</title>
 </head>
 <body>
