--- a/indexes/index6.html
+++ b/indexes/index6.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../git3/assets/css/style6.css">
+    <link rel="stylesheet" href="../assets/css/style6.css">
     <title>Login</title>
 </head>
 <body>
     <div class="header">
         <div class="header_main">
             <div class="img_logo_header">
-                <img src="../git3/assets/images/1_str/skybox.png" alt="">
+                <img src="../assets/images/1_str/skybox.png" alt="">
             </div>
             <ul>
                 <li><a href="">Home</a></li>
@@ -56,14 +56,14 @@
     <div class="section3">
         <div class="sec3_main">
             <div class="sec3_comp">
-                <img src="../git3/assets/images/2_page/3_section/add-user 1.svg" alt="">
+                <img src="../assets/images/2_page/3_section/add-user 1.svg" alt="">
                 <div class="comp_text">
                     <div class="comp1">999529 000 000</div>
                     <div class="comp2">Загружено файлов на сервис</div>
                 </div>
             </div>
             <div class="sec3_comp">
-                <img src="../git3/assets/images/2_page/3_section/Icon.svg" alt="">
+                <img src="../assets/images/2_page/3_section/Icon.svg" alt="">
                 <div class="comp_text">
                     <div class="comp1">235 764 784</div>
                     <div class="comp2">Зарегистрировано пользователей</div>
