--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="login_signup">
                     <a href="../SKY-Cloud/indexes/index6.html" class="login_header">LOGIN</a></li>
                     <div class="button_header">
-                        <button class="btn_header" onclick="location.href='../git3/index5.html'">SIGN UP</button>
+                        <button class="btn_header" onclick="location.href='../SKY-Cloud/indexes/index5.html'">SIGN UP</button>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                     <p class="text3_sec1">STORE AND MANAGE ALL YOUR FILES</p>
                     <p class="text4_sec1">Upload multiple files at once and keep them<br> forever on this site. If you're using FireFox or<br> Chrome, you can simply drag & drop your files<br> to begin uploading</p>
                     <div class="button_sec1">
-                        <button class="btn_sec1"onclick="location.href='../git3/index7.html'" >
+                        <button class="btn_sec1"onclick="location.href='../SKY-Cloud/indexes/index7.html'">
                             Try SkyBox Now
                         </button>
                     </div>
