--- a/indexes/index7.html
+++ b/indexes/index7.html
@@ -29,7 +29,7 @@
         </div>
         <div class="cards">
             <div class="card_1">
-                <img src="../assets/images/7_page/1_section/Frame_1.png alt="">
+                <img src="../assets/images/7_page/1_section/Frame_1.png">
                 <div class="card_1_text">
                     <div class="card_1_txt_1">
                         <p>ACCOUNT TYPE:</p>
